--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Pizzaria Delícia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -21,7 +22,7 @@
     <h2>Sobre Nós</h2>
     <p>Bem-vindo à Pizzaria Delícia! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
   </section>
-
+<p>cvjsvUIVDUASBH</p>
   <section id="menu">
     <h2>Menu</h2>
     <ul>
