--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Pizzaria Delícia</h1>
+    <h1>Pizzaria Tasbem</h1>
     <nav>
       <ul>
         <li><a href="#sobre">Sobre</a></li>
@@ -19,7 +19,7 @@
 
   <section id="sobre">
     <h2>Sobre Nós</h2>
-    <p>Bem-vindo à Pizzaria Delícia! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
+    <p>Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
   </section>
 
   <section id="menu">
@@ -44,11 +44,11 @@
     <h2>Contato</h2>
     <p>Para fazer um pedido ou obter mais informações, entre em contato conosco:</p>
     <p>Telefone: (XX) XXXX-XXXX</p>
-    <p>Email: contato@pizzariadelicia.com</p>
+    <p>Email: contato@pizzariatasbem.com</p>
   </section>
 
   <footer>
-    <p>Todos os direitos reservados &copy; 2023 Pizzaria Delícia</p>
+    <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
   </footer>
 </body>
 </html>
