--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
 </head>
 <body>
   <header>
-    <h1>Pizzaria Tasbem</h1>
-    <nav>
-      <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Sobre nos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menus</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contactos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
@@ -22,10 +43,6 @@
     <h2>Sobre Nós</h2>
     <p>Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
   </section>
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
   <section id="menu">
     <h2>Menu</h2>
     <ul>
