--- a/html/index.html
+++ b/html/index.html
@@ -15,13 +15,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Sobre nos</a>
+              <a class="nav-link active" aria-current="page" href="/html/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menus</a>
+              <a class="nav-link active" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contactos</a>
+              <a class="nav-link" href="/html/menus.html">Menus</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/html/contactos.html">Contactos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,35 +41,9 @@
       </div>
     </nav>
   </header>
+  
 
-  <section id="sobre">
-    <h2>Sobre Nós</h2>
-    <p>Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
-  </section>
-  <section id="menu">
-    <h2>Menu</h2>
-    <ul>
-      <li>
-        <h3>Margherita</h3>
-        <p>Molho de tomate, mussarela de búfala, tomate e manjericão.</p>
-      </li>
-      <li>
-        <h3>Calabresa</h3>
-        <p>Molho de tomate, calabresa, cebola e azeitonas.</p>
-      </li>
-      <li>
-        <h3>Quatro Queijos</h3>
-        <p>Molho de tomate, mussarela, gorgonzola, parmesão e catupiry.</p>
-      </li>
-    </ul>
-  </section>
-
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>Para fazer um pedido ou obter mais informações, entre em contato conosco:</p>
-    <p>Telefone: (XX) XXXX-XXXX</p>
-    <p>Email: contato@pizzariatasbem.com</p>
-  </section>
+  
 
   <footer>
     <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
