--- a/html/contactos.html
+++ b/html/contactos.html
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/html/index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
               </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
+              <a class="nav-link" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/html/menus.html">Menus</a>
@@ -26,16 +26,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/html/contactos.html">Contactos</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
+            
           </ul>
         </div>
       </div>
