--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,6 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -54,6 +53,15 @@
     </nav>
   </header>
   
+  <!--Slideshow-->
+
+  <section class="slideshow">
+    <video class="imagem-slideshow" autoplay muted loop>
+      <source src="../Video/PromoVideo.mp4" type="video/mp4">
+    </video>
+  </section>
+  
+
   <footer>
     <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
   </footer>
