--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
   <header>
@@ -34,6 +34,10 @@
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
+            <div class="imagem_logo">
+              <img src="../imagens/Logo.PNG" >
+            </div>
+            
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
             </li>
