--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 
   <title>Pizzaria Delícia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../style/style_index.css">
 </head>
 <body>
   <header>
@@ -16,7 +16,6 @@
             <div class="imagem_logo">
               <img src="../imagens/Logo.PNG" >
             </div>
-            
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
             </li>
@@ -27,7 +26,7 @@
               <a class="nav-link" href="/html/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contactos.html">Contactos</a>
+              <a class="nav-link" href="/html/contactos.html">Contatos</a>
             </li>
             
           </ul>
@@ -39,7 +38,7 @@
   <!--Slideshow-->
 
   <section class="slideshow">
-    <video class="imagem-slideshow" autoplay muted loop>
+    <video class="video-slideshow" autoplay muted loop>
       <source src="../Video/PromoVideo.mp4" type="video/mp4">
     </video>
   </section>
