--- a/html/contactos.html
+++ b/html/contactos.html
@@ -40,5 +40,10 @@
     <p>Telefone: (XX) XXXX-XXXX</p>
     <p>Email: contato@pizzariatasbem.com</p>
   </section>
+  <div class="footer-container">
+    <footer>
+      <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
+    </footer>
+    </div>
 </body>
 </html>
