--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -4,19 +4,20 @@
 
   <title>Pizzaria Delícia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style/style.css">
+  <link rel="stylesheet" type="text/css" href="../style/style_sobre_nos.css">
 </head>
 <body>
   <header>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
+            <div class="imagem_logo">
+              <img src="../imagens/Logo.PNG" >
+            </div>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
-              </li>
+              <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
             </li>
@@ -24,8 +25,9 @@
               <a class="nav-link" href="/html/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contactos.html">Contactos</a>
+              <a class="nav-link" href="/html/contactos.html">Contatos</a>
             </li>
+            
           </ul>
         </div>
       </div>
@@ -35,5 +37,10 @@
     <h2>Sobre Nós</h2>
     <p>Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
   </section>
+  <div class="footer-container">
+    <footer>
+      <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
+    </footer>
+    </div>
 </body>
 </html>
