--- a/html/contactos.html
+++ b/html/contactos.html
@@ -17,16 +17,16 @@
               <img src="../imagens/Logo.PNG" >
             </div>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
+              <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/menus.html">Menus</a>
+              <a class="nav-link" href="../html/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contactos.html">Contatos</a>
+              <a class="nav-link" href="../html/contactos.html">Contatos</a>
             </li>
             
           </ul>
@@ -40,6 +40,9 @@
     <p>Telefone: (XX) XXXX-XXXX</p>
     <p>Email: contato@pizzariatasbem.com</p>
   </section>
+  <div class="map-responsive">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1299.3458474872525!2d-8.686897406078996!3d39.23418446077498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18ee6ddc50c5d3%3A0x534d7a6da473c77d!2sISLA%20-%20Instituto%20Superior%20de%20Gest%C3%A3o%20e%20Administra%C3%A7%C3%A3o!5e0!3m2!1spt-PT!2spt!4v1687011540093!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
   <div class="footer-container">
     <footer>
       <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
