--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -16,16 +16,16 @@
               <img src="../imagens/Logo.PNG" >
             </div>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/html/index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/html/sobre_nos.html">Sobre nos</a>
+              <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/menus.html">Menus</a>
+              <a class="nav-link" href="../html/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contactos.html">Contatos</a>
+              <a class="nav-link" href="../html/contactos.html">Contatos</a>
             </li>
             
           </ul>
