--- a/html/contactos.html
+++ b/html/contactos.html
@@ -28,19 +28,26 @@
             <li class="nav-item">
               <a class="nav-link" href="/html/contactos.html">Contatos</a>
             </li>
-            
           </ul>
         </div>
       </div>
     </nav>
   </header>
   <section id="contato">
-    <h2>Contato</h2>
-    <p>Para fazer um pedido ou obter mais informações, entre em contato conosco:</p>
-    <p>Telefone: (XX) XXXX-XXXX</p>
-    <p>Email: contato@pizzariatasbem.com</p>
+    <h1 class="texto_contato">Contatos</h1>
+    <div class="contact-card">
+      <div class="contact-info">
+        <p class="contact-text">Telémovel: (+351) 932421543</p>
+      </div>
+      <div class="contact-info">
+        <p class="contact-text">Email: contato@pizzariatasbem.com</p>
+      </div>
+    </div>
+    <div class="mapa">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1299.3458474872525!2d-8.686897406078996!3d39.23418446077498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18ee6ddc50c5d3%3A0x534d7a6da473c77d!2sISLA%20-%20Instituto%20Superior%20de%20Gest%C3%A3o%20e%20Administra%C3%A7%C3%A3o!5e0!3m2!1spt-PT!2spt!4v1687011540093!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    <div class="footer-container">
   </section>
-  <div class="footer-container">
     <footer>
       <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
     </footer>
