--- a/html/menus.html
+++ b/html/menus.html
@@ -19,13 +19,13 @@
               <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nos</a>
+              <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nós</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../html/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/contactos.html">Contatos</a>
+              <a class="nav-link" href="../html/contactos.html">Contactos</a>
             </li>           
           </ul>
         </div>
