--- a/html/contactos.html
+++ b/html/contactos.html
@@ -34,13 +34,13 @@
     <section id="contato">
       <div class="imagem_fundo">
       <h1 class="texto_podemos_ajudar">Podemos ajudar?</h1>
-      <div class="contact-card">
+      <div class="contacto-cartao">
         <h1 class="texto_contacta_nos">Contacta-nos</h1>
-        <div class="contact-info">
-          <p class="contact-text">Telémovel: (+351) 932421543</p>
+        <div class="contacto-info">
+          <p class="contacto-texto">Telémovel: (+351) 932421543</p>
         </div>
-        <div class="contact-info">
-          <p class="contact-text">Email: contato@pizzariatasbem.com</p>
+        <div class="contacto-info">
+          <p class="contacto-texto">Email: contato@pizzariatasbem.com</p>
         </div>
         <h3 class="texto_onde_nos_encontrar"> Onde nos encontrar?</h3>
       </div>
