--- a/html/index.html
+++ b/html/index.html
@@ -37,15 +37,17 @@
   <!--Slideshow-->
 
   <section class="slideshow">
-    <video class="video-slideshow" autoplay muted loop>
+    <video class="video-slideshow" autoplay muted>
       <source src="../Video/PromoVideo.mp4" type="video/mp4">
     </video>
   </section>
-  
+    <div class="imagem_fundo_frase"></div>
+    <div class="imagem_fundo_frase-visible"></div>
   <div class="footer-container">
   <footer>
     <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
   </footer>
   </div>
+  <script src="scripts/script1.js"></script>
 </body>
 </html>
