--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -34,8 +34,12 @@
     </nav>
   </header>
   <section id="sobre">
-    <h2>Sobre Nós</h2>
-    <p>Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
+    <div class="imagem_fundo">
+      <div class="imagem_fundo1">
+      </div>
+    </div>
+    <h2 class="sobre_nos">Sobre Nós</h2>
+    <p class="sobre_nos">Bem-vindo à Pizzaria Tasbem! Somos especializados em pizzas artesanais feitas com ingredientes frescos e de alta qualidade. Nossa missão é oferecer a melhor experiência gastronômica para os amantes de pizza.</p>
   </section>
   <div class="footer-container">
     <footer>
