--- a/html/contactos.html
+++ b/html/contactos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pizzaria Delícia</title>
+  <title>Pizzaria Tasbem</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../style/style_contatos.css">
 </head>
@@ -11,9 +11,6 @@
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <div class="imagem_logo">
-              <img src="../imagens/Logo.PNG" >
-            </div>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
             </li>
@@ -28,6 +25,9 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div class="imagem_logo">
+        <img src="../imagens/Logo.PNG" >
       </div>
     </nav>
   </header>
