--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Pizzaria Delícia</title>
+  <title>Pizzaria Tasbem</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../style/style_index.css">
 </head>
@@ -12,9 +12,6 @@
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <div class="imagem_logo">
-              <img src="../imagens/Logo.PNG" >
-            </div>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
             </li>
@@ -27,9 +24,11 @@
             <li class="nav-item">
               <a class="nav-link" href="../html/contactos.html">Contactos</a>
             </li>
-            
           </ul>
         </div>
+      </div>
+      <div class="imagem_logo">
+        <img src="../imagens/Logo.PNG" >
       </div>
     </nav>
   </header>
@@ -37,7 +36,7 @@
   <!--Slideshow-->
 
   <section class="slideshow">
-    <video class="video-slideshow" autoplay muted>
+    <video class="video-slideshow" autoplay>
       <source src="../Video/PromoVideo.mp4" type="video/mp4">
     </video>
   </section>
@@ -48,6 +47,6 @@
     <p>Todos os direitos reservados &copy; 2023 Pizzaria Tasbem</p>
   </footer>
   </div>
-  <script src="scripts/script1.js"></script>
+  <script src="scripts/script_video.js"></script>
 </body>
 </html>
