--- a/contactos.html
+++ b/contactos.html
@@ -3,7 +3,7 @@
 <head>
   <title>Pizzaria Tasbem</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../style/style_contatos.css">
+  <link rel="stylesheet" type="text/css" href="style/style_contatos.css">
 </head>
 <body>
   <header>
@@ -12,22 +12,22 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nós</a>
+              <a class="nav-link" aria-current="page" href="/sobre_nos.html">Sobre nós</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/menus.html">Menus</a>
+              <a class="nav-link" href="/menus.html">Menus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/contactos.html">Contactos</a>
+              <a class="nav-link" href="/contactos.html">Contactos</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="imagem_logo">
-        <img src="../imagens/Logo.PNG" >
+        <img src="imagens/Logo.PNG" >
       </div>
     </nav>
   </header>
