--- a/menus.html
+++ b/menus.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-
-    <title>Pizzaria Tasbem</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../style/style_menus.css">
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../html/index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../html/sobre_nos.html">Sobre nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../html/menus.html">Menus</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../html/contactos.html">Contactos</a>
-              </li>
-            </ul>
-          </div>
+<head>
+  <title>Pizzaria Tasbem</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style/style_menus.css">
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/sobre_nos.html">Sobre nós</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/menus.html">Menus</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contactos.html">Contactos</a>
+            </li>
+          </ul>
         </div>
-        <div class="imagem_logo">
-          <img src="../imagens/Logo.PNG" >
-        </div>
-      </nav>
-    </header>
+      </div>
+      <div class="imagem_logo">
+        <img src="imagens/Logo.PNG" >
+      </div>
+    </nav>
+  </header>
     <center>
       <h1>Menu</h1>
       <p></p>
@@ -223,7 +222,7 @@
 
     <p></p>
     <center>
-      <h3>Para encomendar as nossas pizzas clique <a href="..//html/contactos.html">aqui</a></h3> 
+      <h3>Para encomendar as nossas pizzas clique <a href="/contactos.html">aqui</a></h3> 
     </center>
     
   </body>
